Particles Crash #37712

Closed
opened 2013-12-05 20:58:22 +01:00 by Everton Schneider · 10 comments

System Information
Operating system and graphics card

Blender Version
Broken: Blender 2.69 r4838a60
Worked: Blender 2.XX rXXXXXX

Short description of error
Particle Trail is crashing. When adding particle trails it crashes Blender when the main particle life finishes.
When turning particle trails off it runs fine.

Exact steps for others to reproduce the error
On the attached file just playback and watch Blender closing.
Turn off the particle trails value and it runs fine.
Fogos.blend

**System Information** Operating system and graphics card **Blender Version** Broken: Blender 2.69 r4838a60 Worked: Blender 2.XX rXXXXXX **Short description of error** Particle Trail is crashing. When adding particle trails it crashes Blender when the main particle life finishes. When turning particle trails off it runs fine. **Exact steps for others to reproduce the error** On the attached file just playback and watch Blender closing. Turn off the particle trails value and it runs fine. [Fogos.blend](https://archive.blender.org/developer/F36647/Fogos.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @EvertonSchneider

Added subscriber: @EvertonSchneider

Added subscriber: @mikes

Added subscriber: @mikes

version 2.69 (sub 4), branch b'master', commit date b'2013-12-05' b'23:53', hash b'd74d6c7', b'Release'
build date: b'2013-12-06', b'12:58:19'
platform: b'Darwin:64bit'

Broken for me too. Apple dump below. Works fine with trial =1

Process: blender [37370]
Path: /Users/USER/*/blender.app/Contents/MacOS/blender
Identifier: org.blenderfoundation.blender
Version: 2.69 (2.69, 2013-Dec-06, Blender Foundation)
Code Type: X86-64 (Native)
Parent Process: launchd [285]

Date/Time: 2013-12-06 13:31:42.227 +1030
OS Version: Mac OS X 10.7.5 (11G63b)
Report Version: 9

Interval Since Last Report: 9438733 sec
Crashes Since Last Report: 78
Per-App Interval Since Last Report: 1989 sec
Per-App Crashes Since Last Report: 1
Anonymous UUID: EBA978B1-5802-46D9-B747-5F8DF6C78759

Crashed Thread: 1

Exception Type: EXC_CRASH (SIGSEGV)
Exception Codes: 0x0000000000000000, 0x0000000000000000

Application Specific Information:
objc[37370]: garbage collection is OFF

Thread 0:: Dispatch queue: com.apple.main-thread
0 org.blenderfoundation.blender 0x00000001007aa2b1 BKE_ptcache_mem_index_find + 33
1 org.blenderfoundation.blender 0x00000001007870fa init_particle_interpolation + 458
2 org.blenderfoundation.blender 0x000000010078ec98 psys_get_particle_on_path + 936
3 org.blenderfoundation.blender 0x00000001001a9ad6 draw_object + 29526
4 org.blenderfoundation.blender 0x00000001001b91b7 view3d_main_area_draw + 5527
5 org.blenderfoundation.blender 0x00000001003fb01e ED_region_do_draw + 366
6 org.blenderfoundation.blender 0x000000010013ec7e wm_draw_update + 1358
7 org.blenderfoundation.blender 0x000000010013c030 WM_main + 48
8 org.blenderfoundation.blender 0x000000010013bed1 main + 1553
9 org.blenderfoundation.blender 0x0000000100001434 start + 52

Thread 1 Crashed:
0 libsystem_kernel.dylib 0x00007fff8fc44bca __psynch_cvwait + 10
1 libsystem_c.dylib 0x00007fff92162274 _pthread_cond_wait + 840
2 org.blenderfoundation.blender 0x000000010179f401 IlmThread_2_0::Semaphore::wait() + 163
3 org.blenderfoundation.blender 0x000000010179b531 IlmThread_2_0::(anonymous namespace)::WorkerThread::run() + 57
4 org.blenderfoundation.blender 0x000000010179e984 IlmThread_2_0::(anonymous namespace)::threadLoop(void*) + 36
5 libsystem_c.dylib 0x00007fff9215e8bf _pthread_start + 335
6 libsystem_c.dylib 0x00007fff92161b75 thread_start + 13

version 2.69 (sub 4), branch b'master', commit date b'2013-12-05' b'23:53', hash b'd74d6c7', b'Release' build date: b'2013-12-06', b'12:58:19' platform: b'Darwin:64bit' Broken for me too. Apple dump below. Works fine with trial =1 Process: blender [37370] Path: /Users/USER/*/blender.app/Contents/MacOS/blender Identifier: org.blenderfoundation.blender Version: 2.69 (2.69, 2013-Dec-06, Blender Foundation) Code Type: X86-64 (Native) Parent Process: launchd [285] Date/Time: 2013-12-06 13:31:42.227 +1030 OS Version: Mac OS X 10.7.5 (11G63b) Report Version: 9 Interval Since Last Report: 9438733 sec Crashes Since Last Report: 78 Per-App Interval Since Last Report: 1989 sec Per-App Crashes Since Last Report: 1 Anonymous UUID: EBA978B1-5802-46D9-B747-5F8DF6C78759 Crashed Thread: 1 Exception Type: EXC_CRASH (SIGSEGV) Exception Codes: 0x0000000000000000, 0x0000000000000000 Application Specific Information: objc[37370]: garbage collection is OFF Thread 0:: Dispatch queue: com.apple.main-thread 0 org.blenderfoundation.blender 0x00000001007aa2b1 BKE_ptcache_mem_index_find + 33 1 org.blenderfoundation.blender 0x00000001007870fa init_particle_interpolation + 458 2 org.blenderfoundation.blender 0x000000010078ec98 psys_get_particle_on_path + 936 3 org.blenderfoundation.blender 0x00000001001a9ad6 draw_object + 29526 4 org.blenderfoundation.blender 0x00000001001b91b7 view3d_main_area_draw + 5527 5 org.blenderfoundation.blender 0x00000001003fb01e ED_region_do_draw + 366 6 org.blenderfoundation.blender 0x000000010013ec7e wm_draw_update + 1358 7 org.blenderfoundation.blender 0x000000010013c030 WM_main + 48 8 org.blenderfoundation.blender 0x000000010013bed1 main + 1553 9 org.blenderfoundation.blender 0x0000000100001434 start + 52 Thread 1 Crashed: 0 libsystem_kernel.dylib 0x00007fff8fc44bca __psynch_cvwait + 10 1 libsystem_c.dylib 0x00007fff92162274 _pthread_cond_wait + 840 2 org.blenderfoundation.blender 0x000000010179f401 IlmThread_2_0::Semaphore::wait() + 163 3 org.blenderfoundation.blender 0x000000010179b531 IlmThread_2_0::(anonymous namespace)::WorkerThread::run() + 57 4 org.blenderfoundation.blender 0x000000010179e984 IlmThread_2_0::(anonymous namespace)::threadLoop(void*) + 36 5 libsystem_c.dylib 0x00007fff9215e8bf _pthread_start + 335 6 libsystem_c.dylib 0x00007fff92161b75 thread_start + 13

Removed subscriber: @mikes

Removed subscriber: @mikes

This issue was referenced by blender/blender-addons-contrib@793b73edc2

This issue was referenced by blender/blender-addons-contrib@793b73edc269e7e801c2e72f4ae6d11951608f74

This issue was referenced by 793b73edc2

This issue was referenced by 793b73edc269e7e801c2e72f4ae6d11951608f74
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 793b73edc2.

Closed by commit 793b73edc2.

Thank you, Lukas! Thank you very much!

Thank you, Lukas! Thank you very much!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37712
No description provided.