Fix T37712: Point cache index lookup crashed with 0 points stored.

The BKE_ptcache_mem_index_find is using unsigned ints for binary search
"high" values - but this leads to integer overflow if the totpoint
number is 0 and causes invalid array access.